--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
       <artifactId>jackson-datatype-jsr310</artifactId>
       <version>2.9.5</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.12.0</version>
+    </dependency>
   </dependencies>
 
   <build>
