--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,12 @@
       <version>4.12</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>5.10.1</version>
+    </dependency>
+
     <!--logback日志框架 -->
     <dependency>
       <groupId>ch.qos.logback</groupId>
